fix: add z-index to terms popup

--- a/components/TermsPopup/styles.module.scss
+++ b/components/TermsPopup/styles.module.scss
@@ -9,6 +9,7 @@
   align-items: center;
   justify-content: center;
   margin-top: -30px;
+  z-index: 10;
 
   .wrapper {
     width: 500px;
